force-app/main/default/objects/Template_Design__c/Template_Design__c.object-meta.xml
<CustomObject>
    <label>Template Design</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Design</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>