force-app/main/default/objects/Template_Design__c/fields/Available_for_User__c.field-meta.xml
<CustomField>
    <fullName>Available_for_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available for User</label>
    <type>Checkbox</type>
</CustomField>