force-app/main/default/objects/Template_Design__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>