force-app/main/default/objects/Template_Design__c/fields/Display_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Name 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>