force-app/main/default/objects/Template_Design__c/fields/Filter_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filter Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>