force-app/main/default/objects/Template_Design__c/fields/Search_Condition_1__c.field-meta.xml
<CustomField>
    <fullName>Search_Condition_1__c</fullName>
    <label>Search Condition 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Search_Condition</valueSetName>
    </valueSet>
</CustomField>