force-app/main/default/objects/Template_Design__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Membership Activity</fullName>
            </value>
            <value>
                <fullName>Adv Membership Activity</fullName>
            </value>
            <value>
                <fullName>NPS Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>