force-app/main/default/objects/Template_Design__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_for_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>